--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
       let currentWord = "";
 
       async function getWord() {
-        const response = await fetch("http://localhost:3000/words");
+        const response = await fetch(
+          "https://testing-vocab.onrender.com/words"
+        );
         const data = await response.json();
         currentWord = data.word;
         document.getElementById("word").innerText = currentWord;
@@ -32,16 +34,19 @@
       async function checkTranslation() {
         const userTraduction =
           document.getElementById("translationInput").value;
-        const response = await fetch("http://localhost:3000/check", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            word: currentWord,
-            userTraduction: userTraduction,
-          }),
-        });
+        const response = await fetch(
+          "https://testing-vocab.onrender.com/check",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              word: currentWord,
+              userTraduction: userTraduction,
+            }),
+          }
+        );
 
         const data = await response.json();
         const resultDiv = document.getElementById("result");
